WIP to search, crawl and scrape web url

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ FIRECRAWL_KEY="YOUR_KEY"
 # If you want to use your self-hosted Firecrawl, add the following below:
 # FIRECRAWL_BASE_URL="http://localhost:3002"
 
+TAVILY_API_KEY="TAVILY_API_KEY"
+
 OPENAI_MODEL="gpt-4o-mini"
 OPENAI_KEY="YOUR_KEY"
 CONTEXT_SIZE="128000"
