--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,10 @@ aiohttp>=3.9.0
 aiofiles>=23.2.1
 tiktoken>=0.5.0
 firecrawl-py>=1.12.0
+tavily-python==0.5.1
+Crawl4AI==0.4.248
 typer>=0.9.0
 prompt-toolkit>=3.0.0
 pydantic==2.10.6
 pypdf2==3.0.1
+html2text==2024.2.26
