--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@ FIRECRAWL_KEY="YOUR_KEY"
 # If you want to use your self-hosted Firecrawl, add the following below:
 # FIRECRAWL_BASE_URL="http://localhost:3002"
 
-TAVILY_API_KEY="TAVILY_API_KEY"
+#TAVILY_API_KEY="TAVILY_API_KEY"
 
-OPENAI_MODEL="gpt-4o-mini"
+OPENAI_MODEL="gpt-4o"
 OPENAI_KEY="YOUR_KEY"
 CONTEXT_SIZE="128000"
 # If you want to use other OpenAI compatible API, add the following below:
