--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "open-deepsearch"  
-version = "0.0.3"
+version = "0.1.0"
 description = "Deep Research but Open-Sourced, called open-deepsearch"
 readme = "README.md"
 authors = [{ name = "Jason Chuang", email = "chuangtcee@gmail.com" }]
@@ -18,7 +18,21 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 requires-python = ">=3.9"
-dependencies = []
+dependencies = [
+    "python-dotenv>=1.0.1",
+    "openai==1.63.2",
+    "aiohttp>=3.9.0",
+    "aiofiles>=23.2.1",
+    "tiktoken>=0.5.0",
+    "firecrawl-py>=1.12.0",
+    "tavily-python==0.5.1",
+    "Crawl4AI==0.4.248",
+    "typer>=0.9.0",
+    "prompt-toolkit>=3.0.0",
+    "pydantic==2.10.6",
+    "pypdf2==3.0.1",
+    "html2text==2024.2.26"
+]
 
 [tool.setuptools.packages]
 find = {}
